--- a/apps/tienda/templates/producto_crear_editar.html
+++ b/apps/tienda/templates/producto_crear_editar.html
@@ -1,4 +1,4 @@
-{% extends 'index-unlogged.html' %}
+{% extends 'index.html' %}
 
 {% block title %} Mi Tienda {% endblock %}
 
@@ -15,31 +15,31 @@
 
     <div class="form-group">
         <div class="form-label-group">
-            <input type="text" name="nombre" id="id_nombre" value="{{ nombre }}">
+            <input type="text" name="nombre" id="id_nombre" value="{{ producto.nombre }}">
             <label for="id_nombre">Nombre</label>
         </div>
     </div>
     <div class="form-group">
         <div class="form-label-group">
-            <input type="number" name="precio" id="id_precio" value="{{ precio }}" step="0.05">
+            <input type="number" name="precio" id="id_precio" value="{{ producto.strprecio }}" step="0.05">
             <label for="id_precio"> Precio</label>
         </div>
     </div>
     <div class="form-group">
         <div class="form-label-group">
-            <input type="text" name="descripcion" id="id_descripcion" value="{{ descripcion }}">
+            <input type="text" name="descripcion" id="id_descripcion" value="{{ producto.descripcion }}">
             <label for="id_descripcion">Descripcion</label>
         </div>
     </div>
     <div class="form-group">
         <div class="form-label-group">
-            <input type="file" name="foto" id="id_imagen" value="{{ imagen }}" accept="image/*">
+            <input type="file" name="foto" id="id_imagen" value="{{ producto.imagen }}" accept="image/*">
             <label for="id_imagen">Imagen</label>
         </div>
     </div>
     <div class="form-group">
         <div class="form-label-group">
-            <input type="number" name="cantidad" id="id_cantidad" value="{{ cantidad }}">
+            <input type="number" name="cantidad" id="id_cantidad" value="{{ stock.cantidad }}">
             <label for="id_cantidad">Cantidad</label>
         </div>
     </div>
