--- a/apps/tienda/templates/tienda_usuario_editar.html
+++ b/apps/tienda/templates/tienda_usuario_editar.html
@@ -4,19 +4,19 @@
 
 {% block Content %}
 <header>
-    <div><label>{{ message }}</label></div>
+    <div><h1>Configuracion de {{ tienda }}</h1></div>
 </header>
-<form action="" method="post" style="padding-left: 2rem">
+<form action="" method="post" enctype="multipart/form-data" style="padding-left: 2rem">
     {% csrf_token %}
     <div class="form-group">
         <div class="form-label-group">
-            <input type="text" name="nombre" id="id_nombre" value="{{ nombre_tienda }}" class="form-control" autofocus="autofocus">
+            <input type="text" name="nombre" id="id_nombre" value="{{ tienda.nombre }}" class="form-control" autofocus="autofocus">
             <label for="id_nombre">Nombre</label>
         </div>
     </div>
     <div class="form-group">
         <div class="form-label-group">
-            <input type="file"  name="foto" id="id_foto" value="{{ imagen_tienda }}" accept="image/*">
+            <input type="file"  name="foto" id="id_foto" value="{{ tienda.imagen }}" accept="image/*">
             <label for="id_username">Foto</label>
         </div>
     </div>
