agregada columna tienda_id a la tabla de pedidos

--- a/apps/compra/templates/listar-carrito.html
+++ b/apps/compra/templates/listar-carrito.html
@@ -1,10 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'index.html' %}
+{% load staticfiles %}
 
-</body>
-</html>
+
+{% block title %} Mi Tienda {% endblock %}
+
+{% block intro %}{% endblock %}
+
+{% block Content %}
+
+<div class="col-lg-12" style="padding-right: 10rem; padding-left: 10rem; padding-top: 7rem">
+    <h3 class="need-pd header-font-lp">
+        <strong>
+            <b>
+                Su Carrito de Compras
+            </b>
+        </strong>
+    </h3>
+    <div class="row" style="padding-bottom: 3rem">
+    {% for pedido in productos %}
+        <div class="col-lg-3 col-md-1 mb-3">
+            <div class="card h-100">
+            {% if pedido.stock.producto.imagen %}
+            {# aca va la foto asignada a la tienda #}
+            {# <td style="padding-left: 10px">{{ tienda.imagen }}</td> #}
+            {% else %}
+                <a><img class="card-img-top" src="{% static 'img/900x350.png' %}" alt=""></a>
+            {% endif %}
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <a href={% url 'compra:detalles-producto' pedido.tienda.id pedido.stock.id %}>
+                            {{ pedido.stock.producto.nombre }}
+                        </a>
+                    </h4>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-subtitle">
+                        <a>Cantidad : {{ pedido.cantidad }}</a>
+                    </h5>
+                </div>
+
+                <div class="card-footer">
+                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+</div>
+
+
+{% endblock %}
