--- a/apps/tienda/templates/producto_crear_editar.html
+++ b/apps/tienda/templates/producto_crear_editar.html
@@ -5,47 +5,101 @@
 {% block intro %}{% endblock %}
 
 {% block Content %}
-<header style="padding-left: 10rem; padding-top: 6rem">
-    <div class="form-group">
+<header style="padding-left: 35rem; padding-top: 6rem">
+    <div class="form-group container">
         <div class="form-label-group row1 col-lg-12">
-            <h2>{{ message }}</h2>
+            <h1 style="position: center"><strong>{{ message }}</strong></h1>
         </div>
     </div>
 </header>
-<form action="" method="post" style="padding-left: 2rem; padding-top: 7rem">
+<form action="" method="post" style="padding-left: 2rem; padding-top: 5rem">
     {% csrf_token %}
+    <div class="row">
+        <div class="col-5" style="padding-left: 10rem;">
+            <div class="form-group" >
+                <div class="form-label-group">
+                    <input type="text" name="nombre" id="id_nombre" value="{{ producto.nombre }}" style="
+                                                                                                        border-bottom-left-radius: 10px;
+                                                                                                        border-bottom-right-radius: 5px;
+                                                                                                        border-top-left-radius: 5px;
+                                                                                                        border-top-right-radius: 10px;
+                                                                                                        padding-left: 10px;
+                                                                                                        padding-top: 10px;
+                                                                                                        padding-bottom: 10px;
+                                                                                                        padding-right: 10px;
+                                                                                                        width: 100%;">
+                    <label for="id_nombre">Nombre</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-label-group">
+                    <input type="number" name="precio" id="id_precio" value="{{ producto.strprecio }}" step="0.05" style="
+                                                                                                        border-bottom-left-radius: 10px;
+                                                                                                        border-bottom-right-radius: 5px;
+                                                                                                        border-top-left-radius: 5px;
+                                                                                                        border-top-right-radius: 10px;
+                                                                                                        padding-left: 10px;
+                                                                                                        padding-top: 10px;
+                                                                                                        padding-bottom: 10px;
+                                                                                                        padding-right: 10px;
+                                                                                                        width: 100%;">
+                    <label for="id_precio"> Precio</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-label-group">
+                    <input type="text" name="descripcion" id="id_descripcion" value="{{ producto.descripcion }}" style="
+                                                                                                        border-bottom-left-radius: 10px;
+                                                                                                        border-bottom-right-radius: 5px;
+                                                                                                        border-top-left-radius: 5px;
+                                                                                                        border-top-right-radius: 10px;
+                                                                                                        padding-left: 10px;
+                                                                                                        padding-top: 10px;
+                                                                                                        padding-bottom: 10px;
+                                                                                                        padding-right: 10px;
+                                                                                                        width: 100%;">
+                    <label for="id_descripcion">Descripcion</label>
+                </div>
+            </div> 
+            <div class="form-group">
+                <div class="form-label-group">
+                    <input type="number" name="cantidad" id="id_cantidad" value="{{ stock.cantidad }}" style="
+                                                                                                        border-bottom-left-radius: 10px;
+                                                                                                        border-bottom-right-radius: 5px;
+                                                                                                        border-top-left-radius: 5px;
+                                                                                                        border-top-right-radius: 10px;
+                                                                                                        padding-left: 10px;
+                                                                                                        padding-top: 10px;
+                                                                                                        padding-bottom: 10px;
+                                                                                                        padding-right: 10px;
+                                                                                                        width: 100%;">
+                    <label for="id_cantidad">Cantidad</label>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-1"></div>
 
-    <div class="form-group" >
-        <div class="form-label-group">
-            <input type="text" name="nombre" id="id_nombre" value="{{ stock.producto.nombre }}">
-            <label for="id_nombre">Nombre</label>
+        <div class="col-5" style="padding-right: 10rem">
+            <div class="form-group">
+                    <div class="form-label-group">
+                        <input class="btn-danger inputlp" type="file" name="imagen" id="id_imagen" value="{{ producto.imagen }}" accept="image/*">
+                        <!--<label for="id_imagen">Imagen</label>-->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <div class="form-label-group">
-            <input type="number" name="precio" id="id_precio" value="{{ stock.producto.precio|floatformat:"f" }}" step="0.05">
-            <label for="id_precio"> Precio</label>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-label-group">
-            <input type="text" name="descripcion" id="id_descripcion" value="{{ stock.producto.descripcion }}">
-            <label for="id_descripcion">Descripcion</label>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-label-group">
-            <input type="file" name="imagen" id="id_imagen" value="{{ stock.producto.imagen }}" accept="image/*">
-            <label for="id_imagen">Imagen</label>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-label-group">
-            <input type="number" name="cantidad" id="id_cantidad" value="{{ stock.cantidad }}">
-            <label for="id_cantidad">Cantidad</label>
-        </div>
-    </div>
+    <div class="row">
+        <div class="col-5"></div>
 
-    <button class="btn btn-primary" type="submit">{{ accion }}</button>
+        <div class="col-1">
+            <div class="col-1">
+            <button class="btn btn-primary" style="padding-right: 2rem;padding-left:2rem" type="submit">{{ accion }}</button>
+            </div>
+        </div>
+
+        <div class="col-5"></div>
+    </div>
 </form>
 {% endblock %}
