--- a/apps/tienda/templates/tienda_usuario_editar.html
+++ b/apps/tienda/templates/tienda_usuario_editar.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load staticfiles %}
 
 {% block title %} Mi Tienda {% endblock %}
 
@@ -10,19 +11,35 @@
 </header>
 <form action="" method="post" style="padding-left: 2rem">
     {% csrf_token %}
-    <div class="form-group">
-        <div class="form-label-group">
-            <input type="text" name="nombre" id="id_nombre" value="{{ nombre_tienda }}" class="form-control" autofocus="autofocus">
-            <label for="id_nombre">Nombre</label>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-label-group">
-            <input type="file"  name="foto" id="id_foto" value="{{ imagen_tienda }}" accept="image/*">
-            <label for="id_username">Foto</label>
-        </div>
-    </div>
+    <div class="row">
+        <div class="col-5" style="padding-left: 5rem">
+            <h1 style="padding-bottom: 3rem">Edite su Tienda</h1>
+            <div class="form-group">
+                <div class="form-label-group">
+                    <input type="text" name="nombre" id="id_nombre" value="{{ nombre_tienda }}" class="form-control" autofocus="autofocus">
+                    <label for="id_nombre">Nombre</label>
+                </div>
+            </div>
 
-    <button class="btn btn-primary btn-block" type="submit">Actualizar</button>
+            <div class="form-group">
+                <div class="form-label-group">
+                    <input type="file"  name="foto" id="id_foto" value="{{ imagen_tienda }}" accept="image/*" style="margin-bottom: 2rem">
+                    <img class="col-12" src="{% static 'img/900x350.png' %}">
+                    <label for="id_username">Foto</label>
+                </div>
+            </div>
+
+            <button class="btn btn-primary btn-block" type="submit">Actualizar</button>
+        </div>
+
+        <div class="col-1">
+        </div>
+
+        <div class="col-5" style="padding-right: 5rem;">
+            <a><img src="{% static 'img/bussines.jpg' %}"></a>
+        </div>
+    </div>
 </form>
 {% endblock %}
+{% block footer %}
+{% endblock footer %}
