--- a/static/css/shop-homepage.css
+++ b/static/css/shop-homepage.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
 body {
-  padding-top: 56px;
+  padding-top: 0px;
 }
 
 .outlineone {
@@ -15,10 +15,7 @@ body {
 }
 
 .table_ykmd{
-  padding-bottom: 3rem;
-  padding-top: 3rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding: 3rem 5rem;
   margin-top: 5px;
 
 }
