added animations to producto_crear_editar.html

--- a/apps/tienda/templates/producto_crear_editar.html
+++ b/apps/tienda/templates/producto_crear_editar.html
@@ -1,10 +1,8 @@
 {% extends 'index.html' %}
 
-{% block title %} Mi Tienda {% endblock %}
-
 {% block intro %}{% endblock %}
 
-{% block Content %}
+{% block content %}
 <header style="padding-left: 35rem; padding-top: 6rem">
     <div class="form-group container">
         <div class="form-label-group row1 col-lg-12">
