--- a/apps/usuario/templates/login.html
+++ b/apps/usuario/templates/login.html
@@ -1,11 +1,9 @@
 {% extends 'index.html' %}
 
-{% block title %} User Login {% endblock %}
-
 {% block body_class %}class="bg-dark"{% endblock %}
 
-{% block body_content %}
-<div class="container">
+{% block body %}
+<div class="container" style="padding: 200px">
     <div class="card mx-auto mt-5" style="width: 25rem">
         <div class="card-header">{% block card_header %}Login{% endblock %}</div>
         <div class="card-body">
