--- a/apps/tienda/templates/tienda_usuario_mostrar.html
+++ b/apps/tienda/templates/tienda_usuario_mostrar.html
@@ -3,68 +3,54 @@
 
 {% block intro %} {% endblock %}
 
-{% block Content %}
-
-    <div class="col-lg-12 need-pd" style="padding-right: 10rem; padding-left: 10rem; padding-top: 7rem">
-        <h3 class="need-pd header-font-lp"><strong>Administracion de <b>{{ nombre_tienda }}</b></strong></h3>
-        <div class="col-lg-7 col-md-6 mb-2">
-            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                  <img class="d-block img-fluid" src="{% static 'img/900x350.png' %}" alt="First slide">
+{% block content %}
+<div class="container" style="padding: 25px">
+    <div class="row">
+        <div class="col-lg-3">
+            <div class="row">
+                <div class="col-lg-12 animated fadeInDown" style="padding: 5px">
+                    <h3 class="need-pd header-font-lp"><strong>Administración de <b>{{ nombre_tienda }}</b></strong></h3>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="{% static 'img/900x350.png' %}" alt="Second slide">
+                <div class="col-lg-12 animated fadeInDown" style="padding: 5px">
+                    <div class="list-group">
+                        {% for categoria in categorias %}
+                        <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
+                        {% endfor %}
+                    </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" src="{% static 'img/900x350.png' %}" alt="Third slide">
+                <div class="col-lg-12 animated fadeInDown" style="padding: 5px">
+                    <a class="btn btn-outline-primary" href="{% url 'tienda:crear-producto' %}">Agregar Producto</a>
                 </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
             </div>
         </div>
-        <button class="btn btn-primary bg-transparent col-lg-3" style="margin-bottom: 1rem; margin-top: 1rem">
-            <a style="color: #171a1d;" href="{% url "tienda:crear-producto" %}">
-                Agregar Producto
-            </a>
-        </button>
-        <div class="row" style="padding-bottom: 3rem">
-             {% for stock in user_stock_list %}
-              <div class="col-lg-2 col-md-6 mb-3">
-                <div class="card h-100">
-                  <a href="#"><img class="card-img-top" src="{% static 'img/900x350.png' %}" alt=""></a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">{{ stock.producto.nombre }}</a>
-                    </h4>
-                    <h5>{{ stock.producto.precio }} $</h5>
-                    <h5><strong>Cantidad:</strong> {{ stock.cantidad }} unidades</h5>
-                      <button class="btn btn-secondary">
-                        <a style="color: #171a1d;" href={% url 'tienda:editar-producto' stock.id %}>Editar</a>
-                      </button>
-                      <button class="btn btn-danger">
-                        <a style=" color: #171a1d;" href={% url 'tienda:borrar-producto' stock.producto.id %}>Eliminar</a>
-                      </button>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                  </div>
+        <div class="col-lg-9">
+            <div class="row">
+                {% for stock in user_stock_list %}
+                <div class="col-lg-4 col-md-6 mb-3 animated fadeInLeft">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h6><strong>Producto: </strong>{{ stock.producto.nombre }}</h6>
+                            <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>
+                            <h6><strong>Cantidad: </strong>{{ stock.cantidad }}</h6>
+                            <div class="btn-group btn-group-sm">
+                                <button class="btn btn-secondary">
+                                    <a style="color: #f7f7f7;" href={% url 'tienda:editar-producto' stock.id %}>Editar</a>
+                                </button>
+                                <button class="btn btn-danger">
+                                    <a style="color: #f7f7f7" href={% url 'tienda:borrar-producto' stock.producto.id %}>Eliminar</a>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
     </div>
-
+</div>
 {% endblock %}
+
+{% block footer %} {% endblock %}
