--- a/apps/tienda/templates/producto_crear_editar.html
+++ b/apps/tienda/templates/producto_crear_editar.html
@@ -1,103 +1,39 @@
-{% extends 'index.html' %}
+{% extends 'index-fixed.html' %}
 
-{% block intro %}{% endblock %}
 
 {% block content %}
-<header style="padding-left: 35rem; padding-top: 6rem">
-    <div class="form-group container">
-        <div class="form-label-group row1 col-lg-12">
-            <h1 style="position: center"><strong>{{ message }}</strong></h1>
-        </div>
-    </div>
-</header>
-<form action="" method="post" style="padding-left: 2rem; padding-top: 5rem">
-    {% csrf_token %}
-    <div class="row">
-        <div class="col-5" style="padding-left: 10rem;">
-            <div class="form-group" >
-                <div class="form-label-group">
-                    <input type="text" name="nombre" id="id_nombre" value="{{ producto.nombre }}" style="
-                                                                                                        border-bottom-left-radius: 10px;
-                                                                                                        border-bottom-right-radius: 5px;
-                                                                                                        border-top-left-radius: 5px;
-                                                                                                        border-top-right-radius: 10px;
-                                                                                                        padding-left: 10px;
-                                                                                                        padding-top: 10px;
-                                                                                                        padding-bottom: 10px;
-                                                                                                        padding-right: 10px;
-                                                                                                        width: 100%;">
-                    <label for="id_nombre">Nombre</label>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="form-label-group">
-                    <input type="number" name="precio" id="id_precio" value="{{ producto.strprecio }}" step="0.05" style="
-                                                                                                        border-bottom-left-radius: 10px;
-                                                                                                        border-bottom-right-radius: 5px;
-                                                                                                        border-top-left-radius: 5px;
-                                                                                                        border-top-right-radius: 10px;
-                                                                                                        padding-left: 10px;
-                                                                                                        padding-top: 10px;
-                                                                                                        padding-bottom: 10px;
-                                                                                                        padding-right: 10px;
-                                                                                                        width: 100%;">
-                    <label for="id_precio"> Precio</label>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="form-label-group">
-                    <input type="text" name="descripcion" id="id_descripcion" value="{{ producto.descripcion }}" style="
-                                                                                                        border-bottom-left-radius: 10px;
-                                                                                                        border-bottom-right-radius: 5px;
-                                                                                                        border-top-left-radius: 5px;
-                                                                                                        border-top-right-radius: 10px;
-                                                                                                        padding-left: 10px;
-                                                                                                        padding-top: 10px;
-                                                                                                        padding-bottom: 10px;
-                                                                                                        padding-right: 10px;
-                                                                                                        width: 100%;">
-                    <label for="id_descripcion">Descripcion</label>
-                </div>
-            </div> 
-            <div class="form-group">
-                <div class="form-label-group">
-                    <input type="number" name="cantidad" id="id_cantidad" value="{{ stock.cantidad }}" style="
-                                                                                                        border-bottom-left-radius: 10px;
-                                                                                                        border-bottom-right-radius: 5px;
-                                                                                                        border-top-left-radius: 5px;
-                                                                                                        border-top-right-radius: 10px;
-                                                                                                        padding-left: 10px;
-                                                                                                        padding-top: 10px;
-                                                                                                        padding-bottom: 10px;
-                                                                                                        padding-right: 10px;
-                                                                                                        width: 100%;">
-                    <label for="id_cantidad">Cantidad</label>
-                </div>
-            </div>
-        </div>
-        
-        <div class="col-1"></div>
+<h1 class="text-center" style="padding-top: 50px; padding-bottom: 25px"><strong>{{ header }}</strong></h1>
 
-        <div class="col-5" style="padding-right: 10rem">
-            <div class="form-group">
-                    <div class="form-label-group">
-                        <input class="btn-danger inputlp" type="file" name="imagen" id="id_imagen" value="{{ producto.imagen }}" accept="image/*">
-                        <!--<label for="id_imagen">Imagen</label>-->
+
+<div class="container">
+    <form method="post">
+        {% csrf_token %}
+        <div class="card">
+            <div class="container" style="padding: 25px 120px 10px;">
+                <div class="row">
+                    <div class="form-group col-lg-12">
+                        <label for="id_nombre">Nombre</label>
+                        <input class="form-control" type="text" name="nombre" id="id_nombre" value="{{ stock.producto.nombre }}">
+                    </div>
+                    <div class="form-group col-lg-6" >
+                        <label for="id_precio">Precio</label>
+                        <input class="form-control" type="number" name="precio" id="id_precio" value="{{ stock.producto.precio|floatformat }}" step="0.05">
+                    </div>
+                    <div class="form-group col-lg-6" >
+                        <label for="id_cantidad">Cantidad</label>
+                        <input class="form-control" type="number" name="cantidad" id="id_cantidad" value="{{ stock.cantidad }}">
+                    </div>
+                    <div class="form-group col-lg-12" >
+                        <label for="id_descripcion">Descripcion</label>
+                        <textarea class="form-control" rows="5" name="descripcion" id="id_descripcion">{{ stock.producto.descripcion }}</textarea>
                     </div>
                 </div>
+                <div class="text-center">
+                    <button class="btn btn-primary" type="submit">{{ accion }}</button>
+                    <a class="btn btn-danger" href="{% url 'tienda:mostrar-tienda' %}">Cancelar</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-5"></div>
-
-        <div class="col-1">
-            <div class="col-1">
-            <button class="btn btn-primary" style="padding-right: 2rem;padding-left:2rem" type="submit">{{ accion }}</button>
-            </div>
-        </div>
-
-        <div class="col-5"></div>
-    </div>
-</form>
+    </form>
+</div>
 {% endblock %}
