--- a/apps/tienda/templates/tienda_usuario_editar.html
+++ b/apps/tienda/templates/tienda_usuario_editar.html
@@ -1,45 +1,33 @@
-{% extends 'index.html' %}
+{% extends 'index-fixed.html' %}
 {% load staticfiles %}
 
-{% block title %} Mi Tienda {% endblock %}
 
-{% block intro %} {% endblock %}
+{% block content %}
+<h1 class="text-center" style="padding-top: 50px; padding-bottom: 25px"><strong>Edite su tienda</strong></h1>
 
-{% block Content %}
-<header style="padding-top: 7rem; padding-left: 10rem;">
-    <div><label>{{ message }}</label></div>
-</header>
-<form action="" method="post" style="padding-left: 2rem">
-    {% csrf_token %}
-    <div class="row">
-        <div class="col-5" style="padding-left: 5rem">
-            <h1 style="padding-bottom: 3rem">Edite su Tienda</h1>
-            <div class="form-group">
-                <div class="form-label-group">
-                    <input type="text" name="nombre" id="id_nombre" value="{{ nombre_tienda }}" class="form-control" autofocus="autofocus">
-                    <label for="id_nombre">Nombre</label>
+
+<div class="container">
+    <form method="post">
+        {% csrf_token %}
+        <div class="card">
+            <div class="container" style="padding: 25px 120px 10px;">
+                <div class="row">
+                    <div class="form-group col-lg-12">
+                        <label for="id_nombre">Nombre</label>
+                        <input class="form-control" type="text" name="nombre" id="id_nombre" value="{{ stock.producto.nombre }}">
+                    </div>
+                    <div class="form-group col-lg-12">
+                        <label for="id_username">Foto</label>
+                        <img class="col-12" src="{% static 'img/900x350.png' %}" alt="">
+                        <input class="form-control-file" type="file"  name="foto" id="id_foto" value="{{ imagen_tienda }}" accept="image/*">
+                    </div>
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-primary" type="submit">Actualizar</button>
+                    <button class="btn btn-danger"><a style="color: #f7f7f7;" href="{% url 'tienda:mostrar-tienda' %}">Cancelar</a></button>
                 </div>
             </div>
-
-            <div class="form-group">
-                <div class="form-label-group">
-                    <input type="file"  name="foto" id="id_foto" value="{{ imagen_tienda }}" accept="image/*" style="margin-bottom: 2rem">
-                    <img class="col-12" src="{% static 'img/900x350.png' %}">
-                    <label for="id_username">Foto</label>
-                </div>
-            </div>
-
-            <button class="btn btn-primary btn-block" type="submit">Actualizar</button>
         </div>
-
-        <div class="col-1">
-        </div>
-
-        <div class="col-5" style="padding-right: 5rem;">
-            <a><img src="{% static 'img/bussines.jpg' %}"></a>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
 {% endblock %}
-{% block footer %}
-{% endblock footer %}
