--- a/apps/tienda/templates/tienda_visitar.html
+++ b/apps/tienda/templates/tienda_visitar.html
@@ -1,12 +1,8 @@
-{% extends 'index.html' %}
+{% extends 'index-fixed.html' %}
 {% load staticfiles %}
 
 
-{% block title %} {{ tienda.nombre }} {% endblock %}
-
-{% block intro %} {% endblock %}
-
-{% block Content %}
+{% block content %}
   <div class="col-lg-12" style="padding-right: 10rem; padding-left: 10rem; padding-top: 7rem">
     <h3 class="need-pd header-font-lp"><strong>Bienvenido a <b>{{ tienda.nombre }}</b></strong></h3>
     <div class="col-lg-7 col-md-6 mb-2">
