--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
 
 <body>
     {% block body %}
+    {% block navbar %}
     <nav class="navbar" style="background-color: rgba(191,221,233,0.76)">
         <div class="container">
             <div class="logo float-left">
@@ -42,29 +43,30 @@
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="{% url 'index' %}">Inicio</a></li>
-                    <li><a href="{% url 'tienda:mostrar-tienda' %}">Mi Tienda</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'index' %}">Inicio</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:mostrar-tienda' %}">Mi Tienda</a></li>
                     {% if tienda_id %}
-                    <li><a href="{% url 'tienda:editar-tienda' tienda_id %}">Editar</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:editar-tienda' tienda_id %}">Editar</a></li>
                     {% endif %}
-                    <li><a>Productos</a></li>
-                    <li><a href="{% url 'tienda:listar-tiendas' %}">Tiendas</a></li>
-                    <li><a href="{% url 'compra:listar-carrito' %}">Carrito</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a>Productos</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:listar-tiendas' %}">Tiendas</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'compra:listar-carrito' %}">Carrito</a></li>
                     {% if not tienda_id %}
-                    <li><a href="{% url 'usuario:login' %}">Login</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'usuario:login' %}">Login</a></li>
                     {% else %}
-                    <li><a href="{% url 'usuario:logout' %}">Logout</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'usuario:logout' %}">Logout</a></li>
                     {% endif %}
                 </ul>
             </nav>
         </div>
     </nav>
+    {% endblock %}
 
     {% block intro %}
-    <section id="intro" class="clearfix" style="padding: 202px">
+    <section id="intro" class="clearfix" style="padding: 225px">
         <div class="container d-flex h-100">
             <div class="row justify-content-center align-self-center">
-                <div class="col-md-6 intro-info order-md-first order-last">
+                <div class="col-md-6 intro-info animated fadeInLeft" style="animation-delay: 500ms">
                     {% if not tienda_id %}
                     <h2>La Peseta <br>Obten tu propia <span>Tienda</span></h2>
                     {% else %}
@@ -72,7 +74,7 @@
                     {% endif %}
                     <div><a href="#" class="btn-get-started scrollto">Informacion</a></div>
                 </div>
-                <div class="col-md-6 intro-img order-md-last order-first">
+                <div class="col-md-6 intro-img animated fadeInLeft">
                     <img src="{% static 'img/intro-img.svg' %}" alt="" class="img-fluid">
                 </div>
             </div>
@@ -80,20 +82,18 @@
     </section>
     {% endblock intro %}
 
-    {% block content %}{% endblock %}
+    {% block content %}
+
+    {% endblock %}
     <!--==========================
     Footer
     ============================-->
-    {% block footer %}
-    <footer class="section-bg footer-info" style="background-color: rgba(191,221,233,0.35)">
-        <div class="container">
-            <div class="copyright">
-                &copy; Copyright <strong>La Peseta</strong>. All Rights Reserved<br>Designed by RegCode
-            </div>
-        </div>
-    </footer>
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-    {% endblock footer %}
+{#    {% block footer %}#}
+{#    <footer class="section-bg footer-info" style="background-color: rgba(191,221,233,0.35)">#}
+
+{#    </footer>#}
+{#    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>#}
+{#    {% endblock footer %}#}
 
     <!-- JavaScript Libraries -->
 {#    <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>#}
