--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,7 @@
                 <ul>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'index' %}">Inicio</a></li>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:mostrar-tienda' %}">Mi Tienda</a></li>
-                    {% if tienda_id %}
-                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:editar-tienda' tienda_id %}">Editar</a></li>
-                    {% endif %}
-                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a>Productos</a></li>
+                    <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:listar-productos'%}">Productos</a></li>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'tienda:listar-tiendas' %}">Tiendas</a></li>
                     <li class="animated fadeInDown" style="animation-delay: 100ms"><a href="{% url 'compra:listar-carrito' %}">Carrito</a></li>
                     {% if not tienda_id %}
