--- a/apps/tienda/templates/productos_listar.html
+++ b/apps/tienda/templates/productos_listar.html
@@ -5,32 +5,32 @@
 {% block content %}
 <div class="container" style="padding: 25px">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 mb-2">
             <div class="row">
-                <div class="col-lg-12 animated fadeInDown" style="padding: 5px; animation-delay: 0.25s">
-                    <h3><strong>Bienvenid@ a <b>{{ tienda.nombre }}</b></strong></h3>
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.25s">
+                    <h3><strong>Productos</strong></h3>
                 </div>
-                <div class="col-lg-12 animated fadeInDown" style="padding: 5px; animation-delay: 0.5s">
-                    <a class="list-group-item">Categorias</a>
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
                     <div class="list-group">
+                        <a class="list-group-item">Categorias</a>
                         {% for categoria in categorias %}
                         <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
                         {% endfor %}
                     </div>
-                </div>
-                <div class="col-lg-12 animated fadeInDown" style="padding: 5px; animation-delay: 0.75s">
-                    <a class="btn btn-outline-primary" href="{% url 'tienda:listar-tiendas' %}">Regresar</a>
+                    </div>
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                    <a class="btn btn-outline-primary" href="{% url 'index' %}">Regresar</a>
                 </div>
             </div>
         </div>
-        <div class="col-lg-9">
+        <div class="col-lg-9 mb-2">
             <div class="row">
                 {% for stock in stock_list %}
                 <div class="col-lg-4 mb-3 animated fadeInLeft" style="animation-delay: 1s">
                     <div class="card">
                         <div class="card-body">
                             <h6><strong>Producto: </strong>
-                                <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.producto.id%}">
+                                <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.id%}">
                                     {{ stock.producto.nombre }}
                                 </a>
                             </h6>
