--- a/apps/tienda/templates/tienda_usuario_editar.html
+++ b/apps/tienda/templates/tienda_usuario_editar.html
@@ -3,23 +3,26 @@
 
 
 {% block content %}
-<h1 class="text-center" style="padding-top: 50px; padding-bottom: 25px"><strong>Edite su tienda</strong></h1>
 
 
-<div class="container">
+
+<div class="container" style="padding: 100px 150px">
     <form method="post">
         {% csrf_token %}
         <div class="card">
+            <div class="card-header">
+                <h3 class="text-center"><strong>Edite su tienda</strong></h3>
+            </div>
             <div class="container" style="padding: 25px 120px 10px;">
                 <div class="row">
                     <div class="form-group col-lg-12">
                         <label for="id_nombre">Nombre</label>
-                        <input class="form-control" type="text" name="nombre" id="id_nombre" value="{{ stock.producto.nombre }}">
+                        <input class="form-control" type="text" name="nombre" id="id_nombre" value="{{ tienda.nombre }}">
                     </div>
                     <div class="form-group col-lg-12">
                         <label for="id_username">Foto</label>
                         <img class="col-12" src="{% static 'img/900x350.png' %}" alt="">
-                        <input class="form-control-file" type="file"  name="foto" id="id_foto" value="{{ imagen_tienda }}" accept="image/*">
+                        <input class="form-control-file" type="file"  name="foto" id="id_foto" value="{{ tienda.imagen }}" accept="image/*">
                     </div>
                 </div>
                 <div class="text-center">
