--- a/apps/tienda/templates/tienda_usuario_mostrar.html
+++ b/apps/tienda/templates/tienda_usuario_mostrar.html
@@ -7,26 +7,30 @@
     <div class="row">
         <div class="col-lg-3">
             <div class="row">
-                <div class="col-lg-12 animated fadeInDown" style="padding: 5px; animation-delay: 0.25s">
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.25s">
                     <h3 class="need-pd header-font-lp"><strong>Administración de <b>{{ nombre_tienda }}</b></strong></h3>
                 </div>
-                <div class="col-lg-12 animated fadeInDown" style="padding: 5px; animation-delay: 0.5s">
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
                     <div class="list-group">
+                        <a class="list-group-item">Categorias</a>
                         {% for categoria in categorias %}
                         <a class="list-group-item"><label><input type="checkbox"></label> {{ categoria }}</a>
                         {% endfor %}
                     </div>
                 </div>
-                <div class="col-lg-12 animated fadeInDown" style="padding: 5px; animation-delay: 0.75s">
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
                     <a class="btn btn-outline-primary" href="{% url 'tienda:crear-producto' %}">Agregar Producto</a>
+                </div>
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                    <a class="btn btn-outline-primary" href="{% url 'tienda:editar-tienda' tienda_id %}">Editar Perfil</a>
                 </div>
             </div>
         </div>
         <div class="col-lg-9">
             <div class="row">
                 {% for stock in user_stock_list %}
-                <div class="col-lg-4 col-md-6 mb-3 animated fadeInLeft" style="animation-delay: 1s">
-                    <div class="card h-100">
+                <div class="col-lg-4 mb-3 animated fadeInLeft" style="animation-delay: 1s">
+                    <div class="card">
                         <div class="card-body">
                             <h6><strong>Producto: </strong>{{ stock.producto.nombre }}</h6>
                             <h6><strong>Precio  : </strong>{{ stock.producto.precio }}$</h6>
@@ -51,5 +55,3 @@
     </div>
 </div>
 {% endblock %}
-
-{% block footer %} {% endblock %}
