--- a/apps/tienda/templates/tienda_usuario_mostrar.html
+++ b/apps/tienda/templates/tienda_usuario_mostrar.html
@@ -24,6 +24,9 @@
                 <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
                     <a class="btn btn-outline-primary" href="{% url 'tienda:editar-tienda' tienda_id %}">Editar Perfil</a>
                 </div>
+                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                    <a class="btn btn-outline-primary" href="{% url 'subasta:crear-subasta' %}">Subastar</a>
+                </div>
             </div>
         </div>
         <div class="col-lg-9">
