proyect updated to django 3

--- a/apps/subasta/templates/buscar_subastas.html
+++ b/apps/subasta/templates/buscar_subastas.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <li><label>{{ message }}</label></li>
+    <l><label>{{ message }}</label></l>
 </header>
     <form action={% url 'subasta:buscar-subastas' %} method="get">
         <input type="text" name="prod_name">
