--- a/apps/tienda/templates/tienda_usuario_mostrar.html
+++ b/apps/tienda/templates/tienda_usuario_mostrar.html
@@ -1,6 +1,5 @@
 {% extends 'index-fixed.html' %}
-{% load staticfiles %}
-
+{% load static %}
 
 {% block content %}
 <div class="container" style="padding: 25px 0">
