--- a/apps/tienda/templates/tienda_usuario_mostrar.html
+++ b/apps/tienda/templates/tienda_usuario_mostrar.html
@@ -13,20 +13,20 @@
                     <div class="list-group">
                         <a class="list-group-item"><strong>Categorias</strong></a>
                         {% for categoria in categorias %}
-                        <a class="list-group-item"><label><input type="checkbox"></label><strong>{{ categoria }}</strong></a>
+                        <a class="list-group-item"><label><input type="checkbox"></label><strong> {{ categoria }}</strong></a>
                         {% endfor %}
                     </div>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInUp slow">
+                <div class="col-lg-12 mb-2 animated fadeInUp fast">
                     <a class="btn btn-outline-primary" href="{% url 'tienda:crear-producto' %}">Agregar Producto</a>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInUp slow">
+                <div class="col-lg-12 mb-2 animated fadeInUp fast">
                     <a class="btn btn-outline-primary" href="{% url 'tienda:editar-tienda' tienda_id %}">Editar Perfil</a>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown slow">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <a class="btn btn-outline-primary" href="{% url 'subasta:crear-subasta' %}">Subastar</a>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown slow">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
                 </div>
             </div>
@@ -34,7 +34,7 @@
         <div class="col-lg-9">
             <div class="row">
                 {% for stock in user_stock_list %}
-                <div class="col-lg-4 mb-3 animated fadeInLeft delay-1s">
+                <div class="col-lg-4 mb-3 animated fadeInLeft slow">
                     <div class="card">
                         <div class="card-body">
                             <h6><strong>Producto: </strong>{{ stock.producto.nombre }}</h6>
