--- a/apps/subasta/templates/subastas_listar.html
+++ b/apps/subasta/templates/subastas_listar.html
@@ -1,5 +1,5 @@
 {% extends 'index-fixed.html'%}
-{% load staticfiles %}
+{% load static %}
 
 
 {% block content %}
@@ -7,15 +7,17 @@
     <div class="row">
         <div class="col-lg-3 mb-2">
             <div class="row">
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.25s">
+                <div class="col-lg-12 mb-2 animated fadeInDown faster">
                     <h3><strong>Subastas en Curso</strong></h3>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <div class="form-group">
-                        <input class="form-control" type="text" placeholder="Buscar...">
+                        <label>
+                            <input class="form-control" type="text" placeholder="Buscar...">
+                        </label>
                     </div>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.5s">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <div class="list-group">
                         <a class="list-group-item">Categorias</a>
                         {% for categoria in categorias %}
@@ -23,16 +25,16 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <a class="btn btn-outline-primary" href="{% url 'index' %}">Filtrar</a>
                 </div>
-                <div class="col-lg-12 mb-2 animated fadeInDown" style="animation-delay: 0.75s">
+                <div class="col-lg-12 mb-2 animated fadeInDown fast">
                     <a class="btn btn-outline-danger" href="{% url 'index' %}">Regresar</a>
                 </div>
             </div>
         </div>
         <div class="col-lg-9 mb-2">
-            <div class="card">
+            <div class="card animated fadeInDown slow">
                 <div class="card-body">
                     <div class="table-container">
                         <table class="table table-bordered" style="width: 100%; margin-bottom: 0">
