--- a/templates/index-fixed.html
+++ b/templates/index-fixed.html
@@ -14,6 +14,13 @@
                 <li><a href="{% url 'tienda:mostrar-tienda' %}">Mi Tienda</a></li>
                 <li><a href="{% url 'tienda:listar-productos'%}">Productos</a></li>
                 <li><a href="{% url 'tienda:listar-tiendas' %}">Tiendas</a></li>
+                <li class="dropdown-menu">
+                    <a class="dropdown-item">Action</a>
+                    <a class="dropdown-item">Action</a>
+                    <a class="dropdown-item">Action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item">Action</a>
+                </li>
                 <li><a href="{% url 'subasta:listar-subastas' %}">Subastas</a></li>
                 <li><a href="{% url 'compra:listar-carrito' %}">Carrito</a></li>
                 {% if not tienda_id %}
