--- a/apps/tienda/templates/tienda_visitar.html
+++ b/apps/tienda/templates/tienda_visitar.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container" style="padding: 25px">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 mb-2">
             <div class="row">
                 <div class="col-lg-12 mb-2 animated fadeInDown faster">
                     <h3 class="need-pd header-font-lp"><strong>Bienvenid@ a <b>{{ tienda.nombre }}</b></strong></h3>
