--- a/apps/tienda/templates/tienda_visitar.html
+++ b/apps/tienda/templates/tienda_visitar.html
@@ -30,7 +30,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h6><strong>Producto: </strong>
-                                <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.producto.id%}">
+                                <a href="{% url 'compra:detalles-producto' stock.tienda.id stock.id%}">
                                     {{ stock.producto.nombre }}
                                 </a>
                             </h6>
